--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+body {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#quem-somos h1 {
+	font-weight: bold;
+	color:#68432F;
+	margin-left:5%; 
+}
+
+#quem-somos p {
+	margin-left: 3%;
+}
+
 #parceiros{
 	display:flex;
 	flex-flow: row wrap;
