--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,23 @@ body {
 	color: #68432f;
 	margin-left:5%;
 }
+
+
+#footer{
+	padding: 5px;
+}
+
+
+#footer h2 {
+	font-weight: bold;
+	color: #68432F;
+	margin-left: 5%;
+}
+
+#redes-sociais {
+	padding: 5px;
+	margin-left: 4%;
+	margin-bottom: 6%;
+}
+
+#redes-sociais img:hover {opacity:0.7};
