--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#quem-somos {
+	background-color: #68432F;
+	padding: 7px;
+}
+
 #quem-somos h1 {
 	font-weight: bold;
-	color:#68432F;
-	margin-left:5%; 
+	color:#DDFFCB;
+	margin-left:5%;
 }
 
 #quem-somos p {
 	margin-left: 3%;
+	color: white;
 }
 
 #parceiros{
@@ -31,7 +38,6 @@ body {
 
 #footer{
 	padding: 5px;
-	
 }
 
 
