--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,21 @@ header img:last-child{
 	border: 1px solid black;
 }
 
-
-
+a:link, a:visited {
+	text-decoration: none;
+	color: #68432f;
+	}
+a:hover {
+	text-decoration: underline; 
+	color: black;
+	}
+a:active {
+	text-decoration: none;
+	}
+nav a {
+	margin-left: 3px;
+	margin-right: 3px;
+}
 
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
